Fix blurry outline for annotations

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -66,7 +66,8 @@ div.cg-wrap {
 		width: 18px;
 		height: 18px;
 		z-index: 10;
-		border-radius: 20px;
+		/* Fix blurry background */
+		box-shadow: 1px 1px 100px rgba(0, 0, 0, 0.2);
 	}
 }
 
